--- a/Aleksei_Lesnik_cv.tex
+++ b/Aleksei_Lesnik_cv.tex
@@ -17,9 +17,9 @@
     
     \section{Education}
     
-        \cventry{2008--2017}{Intermediate School}{}{}{Final Exams(Math$\frac{99}{100}$, Computer science$\frac{97}{100}$)}{}
+        \cventry{2008--2017}{Intermediate School}{}{}{}{}
     
-        \cventry{2017--2019}{School}{}{}{Math and Computer Science Class}{}
+        \cventry{2017--2019}{School}{}{}{Mathematics and Informatics class at SPSU}{Final Exams(Mathematics $\frac{99}{100}$, Informatics $\frac{97}{100}$)}
     
         \cventry{2019--2023}{Bachelor}{}{}{\textit{\link[Modern Programming in SPSU]{http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}, Saint-Petersburg}}{}
         
@@ -62,4 +62,3 @@
         \cvitem{}{Robotics, Artificial Intelligence, Machine Learning and Computer Vision}
         
 \end{document}
-
