--- a/Aleksei_Lesnik_cv_Robotics_ML/Aleksei_Lesnik_cv_RML.tex
+++ b/Aleksei_Lesnik_cv_Robotics_ML/Aleksei_Lesnik_cv_RML.tex
@@ -31,7 +31,7 @@
     \section{Summer and Winter Schools}
     
     
-        \cventry{Winter 2019}{Yandex ML School in Sirius Education Center}{Introduction}{}{}{kNN, Regression, Computer Vision, }
+        \cventry{Winter 2019}{Yandex ML School in Sirius Education Center}{Introduction}{}{}{kNN, Regression, Computer Vision}
     
         \cventry{Summer 2019}{JetBrains ML Summer School}{}{}{Introduction, \textcolor{blue}{\link[link]{https://drive.google.com/drive/folders/1sSrpb6hMykIDhc_OqIXFjX7NoiSirLil}}}{ kNN, SVN, Regression, Decision tree, Hill Climb, Genetic algorithm, DL, RL}
     
