--- a/Aleksei_Lesnik_cv_Robotics_ML/Aleksei_Lesnik_cv_RML.tex
+++ b/Aleksei_Lesnik_cv_Robotics_ML/Aleksei_Lesnik_cv_RML.tex
@@ -45,9 +45,9 @@
         
         \cventry{2019}{SPSU Olympiad in computer science}{}{}{First degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141299110240/color.pdf}} $\frac{15}{258} \cdot \frac{258}{2000+}$}{On this Olympiad I coded Discrete geometry and different Data Structures}
         
-        \cventry{2019}{Open Olympiad in Cognitive Technology Programming}{}{}{First degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf}} $\frac{17}{273} \cdot \frac{273}{523}$, I programmed many Data Structures and algorithm.}{}
+        \cventry{2019}{Open Olympiad in Cognitive Technology Programming}{}{}{First degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf}} $\frac{17}{273} \cdot \frac{273}{523}$, I programmed many Data Structures and algorithms}{}
         
-        \cventry{2019}{Individual Olympiad in computer science and programming}{}{}{\textcolor{blue}{\link[link]{https://neerc.ifmo.ru/school/ioip/standings-2019.html}}, Third degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142050593076/color.pdf}} $\frac{87}{339}$, I programmed many Data Structures and algorithm}{}
+        \cventry{2019}{Individual Olympiad in computer science and programming}{}{}{\textcolor{blue}{\link[link]{https://neerc.ifmo.ru/school/ioip/standings-2019.html}}, Third degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142050593076/color.pdf}} $\frac{87}{339}$, I programmed many Data Structures and algorithms}{}
         
         \cventry{2019}{ITMO Olympiad in computer science}{}{}{\textcolor{blue}{\link[link]{https://olymp.ifmo.ru/ru/p/olymp-it-18-19/1212}}, Third degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}} $\frac{159}{900} \cdot \frac{900}{2932}$}{I solved the problems by Theoretical Computer Scince}
         
