--- a/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
+++ b/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
@@ -4,74 +4,83 @@
 \usepackage{lipsum}
 \usepackage[scale=0.8]{geometry}
 \usepackage{geometry}
-\geometry{verbose, a4paper, 
-    tmargin = 1.5cm, 
-    bmargin = 1.5cm, 
-    lmargin = 1.5cm, 
-    rmargin = 1.5cm}
-
-
-\name{Aleksei}{Lesnik}
-
-\title{\vspace{-2cm}Software Engineer{\cdotp}Backend{\cdotp}Highload}
-\mobile{(+1) 714-342-9460}
-\email{lesnik-a-a@yandex.ru}
+\geometry{verbose, a4paper, tmargin = 1.5cm, bmargin = 1cm, lmargin = 1cm, rmargin = 1cm}
 
 \begin{document}
-    
-    \makecvtitle
-      
+
+    \definecolor{Attention}{RGB}{255, 75, 0} 
+
+	\begin{minipage} {0.7\textwidth}
+		\begin{flushleft}
+			\huge \textbf{Aleksei Lesnik} 
+			\newline
+			\textcolor[gray]{0.4} {
+			    \indent Software Engineer / Programmer\\
+			}
+			\normalsize
+		\end{flushleft}
+	\end{minipage}
+	\begin{minipage} {0.3\textwidth}
+		\begin{flushright}
+			\textcolor[gray]{0.4} {
+				\indent Saint-Ptersburg, Russia\\
+				\indent Mobile: +7(981)107-60-21  \\
+				\indent Email : \textcolor{blue} {\href{mailto:lesnik-a-a@yandex.ru} {lesnik-a-a@yandex.ru}}\\ 
+				\indent GitHub : \textcolor{blue} {\href{https://github.com/a-alex-l} {a-alex-l}}\\  	
+			}
+		\end{flushright}
+	\end{minipage}
+
     \section{Education}
-        \cventry{2017--2019}{School}{}{}{Mathematics and Informatics class at SPSU}{Final Exams(Mathematics $\frac{99}{100}$, Informatics $\frac{97}{100}$)}
     
-        \cventry{2019--2023}{Bachelor, Modern Programming in SPSU}{}{}{\textcolor{blue}{\link[link]{http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}}, Saint-Petersburg, I was $\frac{15}{1295}$}{C++, Algorithms, Mathematical analysis, Algebra, Code Review, Discrete Math}
+        \cventry{2019 -- 2023} {Bachelor, Modern Programming in SPSU} {}{} {\textcolor{blue} {\link[link]{http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}}, Saint-Petersburg, I was $\frac{15} {1295}$} {C++ with Code Review, Algorithms, Mathematical analysis, Algebra, Discrete Math, UNIX}
+    
+        \cventry{2017 -- 2019} {School} {}{} {Mathematics and Informatics class at SPSU} {Final Exams(Mathematics $\frac{99} {100}$, Informatics $\frac{97} {100}$)}
         
-        %\cventry{2023--2025}{Graduate}{}{}{}{}
+    \section{GitHub and Projects}
+        
+        \cventry{Spring 2020} {Image analysis, circle finder} {3 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/MapLap} {MapLap}}} {} {\newline Image application returning \LaTeX code. You can load a photo, scan or screenshot} {I made Algorithm. My tools \textcolor{Attention} {Python \& OpenCV} }
+        
+        \cventry{Summer 2020} {Image analysis, draw digitization} {\textcolor{blue} {\href{https://github.com/a-alex-l/MapLap_2} {MapLap2.0}}} {\newline Highly Optimized Console Image application. Optimization by 15 times}{} {I made all application with test cases and my own Hough Transform. My tools \textcolor{Attention} {C++ \& OpenCV} }
+        
+        \cventry{Summer 2020} {Mobile Game, Physics Tetris} {2 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/TetrisBuilder} {Tetris Builder}}} {\newline A game based on tetris blocks}{} {I made the GamePlay. My tools \textcolor{Attention} {Godot Engine \& SQLite} }
         
     \section{Summer and Winter Schools}
         
-        \cventry{Winter 2019}{Summer Informatics Camp}{}{}{Algorithms ans Data Structures}{}
-    
-        \cventry{Summer 2018}{Summer Informatics Camp}{}{}{Algorithms ans Data Structures}{}
+        \cventry{2019 \& 2018} {Summer Informatics Camp} {}{} {Algorithms ans Data Structures} {}
         
-        \cventry{Summer 2018}{School Olympiad Prep}{}{}{Olympiad Algorithms ans Data Structures}{}
-    
-        \cventry{Summer 2017}{School Olympiad Prep}{}{}{Olympiad Algorithms ans Data Structures}{}
+        \cventry{2018 \& 2017} {Summer School Olympiad Prep} {}{} {Olympiad Algorithms ans Data Structures} {}
         
-        \cventry{2016-2019}{ITMO Programming Section}{}{}{Algorithms ans Data Structures}{}
+        \cventry{2016-2019} {ITMO Advanced Programming Section} {}{} {Algorithms ans Data Structures} {}
+        
+        \cventry{} {Sum} {}{} {Binsearch, DSU, MST, BST, vector geometric, graph algorithms, string algorithms} {}
     
     \section{Olympiads and Competitions}
     
-        \cventry{2017}{First Tech Challenge Russia}{}{}{\textcolor{blue}{\link[First FTC]{https://www.spbstu.ru/media/news/achievements/team-school-engineers-future-russia-winner-championship-robotics/}}, Inspire Award}{I programmed the entire robot and 3D-modelled some parts of robot}
+        \cventry{2017} {First Tech Challenge Russia} {}{} {\textcolor{blue} {\link[First FTC]{https://www.spbstu.ru/media/news/achievements/team-school-engineers-future-russia-winner-championship-robotics/}}, \textcolor{Attention} {Inspire Award}} {}
         
-        \cventry{2018}{First Tech Challenge Russia}{}{}{\textcolor{blue}{\link[First FTC]{https://www.spbstu.ru/media/news/achievements/team-polytechnic-quota-world-championship-robotics-usa/}}, Design Award, Winning Aliance Captain}{I programmed and 3D-modelled again and controlled the robot on a field}
+        \cventry{2018} {First Tech Challenge Russia} {}{} {\textcolor{blue} {\link[First FTC]{https://www.spbstu.ru/media/news/achievements/team-polytechnic-quota-world-championship-robotics-usa/}}, \textcolor{Attention} {Design Award}, \textcolor{Attention} {Winning Aliance Captain}} {}
+        
+        \cventry{2018} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/it-test/827}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}} $\frac{97} {458} \cdot \frac{458} {1633}$} {}
+        
+        \cventry{2019} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/olymp-it-18-19/1212}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}} $\frac{159} {900} \cdot \frac{900} {2932}$} {}
     
-        \cventry{2019}{Moscow Olympiad in computer science}{}{}{\textcolor{blue}{\link[link]{http://mos-inf.olimpiada.ru/winners10-11-2019}}, First degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142002045626/color.pdf}} $\frac{11}{435} \cdot \frac{435}{2000+}$}{On this Olympiad I realized Algorithms, Hill Climbing and Genetic algorithm}
+        \cventry{2019} {Moscow Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{http://mos-inf.olimpiada.ru/winners10-11-2019}}, \textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142002045626/color.pdf}} $\frac{11} {435} \cdot \frac{435} {2000+}$} {}
         
-        \cventry{2019}{SPSU Olympiad in computer science}{}{}{First degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141299110240/color.pdf}} $\frac{15}{258} \cdot \frac{258}{2000+}$}{On this Olympiad I coded Discrete geometry and different Data Structures}
+        \cventry{2019} {SPSU Olympiad in computer science} {}{} {\textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141299110240/color.pdf}} $\frac{15} {258} \cdot \frac{258} {2000+}$} {}
         
-        \cventry{2019}{Open Olympiad in Cognitive Technology Programming}{}{}{First degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf}} $\frac{17}{273} \cdot \frac{273}{523}$, I programmed many Data Structures and algorithms.}{}
+        \cventry{2019} {Open Olympiad in Cognitive Technology Programming} {}{} {\textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf}} $\frac{17} {523}$} {}
         
-        \cventry{2019}{Individual Olympiad in computer science and programming}{}{}{\textcolor{blue}{\link[link]{https://neerc.ifmo.ru/school/ioip/standings-2019.html}}, Third degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142050593076/color.pdf}} $\frac{87}{339}$, I programmed many Data Structures and algorithms}{}
-        
-        \cventry{2019}{ITMO Olympiad in computer science}{}{}{\textcolor{blue}{\link[link]{https://olymp.ifmo.ru/ru/p/olymp-it-18-19/1212}}, Third degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}} $\frac{159}{900} \cdot \frac{900}{2932}$}{I solved the problems by Theoretical Computer Scince}
-        
-         \cventry{2018}{ITMO Olympiad in computer science}{}{}{\textcolor{blue}{\link[link]{https://olymp.ifmo.ru/ru/p/it-test/827}}, Third degree \textcolor{blue}{\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}} $\frac{97}{458} \cdot \frac{458}{1633}$}{}
+        \cventry{2019} {Individual Olympiad in Computer Science} {}{} {\textcolor{blue} {\link[link]{https://neerc.ifmo.ru/school/ioip/standings-2019.html}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142050593076/color.pdf}} $\frac{87} {339}$} {}
     
     \section{Technical skills}
     
-        \cvitem{Languages}{C++, C, Python, Julia, \LaTeX }
+        \cvitem{Languages} {C++, C, Python, Julia, \LaTeX }
         
-        \cvitem{Tools}{STL, GitHub, SVN, QT, OpenCV, Creo Parametric (3D modeling)}
-    
-    \section{GitHub}
-    
-        \cvitem{GitHub}{\textcolor{blue}{\link[My code examples]{https://github.com/a-alex-l}}}
+        \cvitem{Tools} {STL, GitHub, SVN, QT, OpenCV, Creo Parametric (3D modeling), Godot, SQLite}
     
     \section{Languages}
     
-        \cvitem{Russian}{Fluent}
-        
-        \cvitem{English}{Low intermediate}
+        \cvitem{English} {Intermediate}
         
 \end{document}
