--- a/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
+++ b/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
@@ -33,25 +33,25 @@
 
     \section{Education}
     
-        \cventry{2019 -- 2023} {Bachelor, Modern Programming in SPSU} {}{} {\textcolor{blue} {\link[link]{http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}}, Saint-Petersburg, I was $\frac{15} {1295}$} {C++ with Code Review, Algorithms, Mathematical analysis, Algebra, Discrete Math, UNIX}
+        \cventry{2019 -- 2023} {Bachelor, Modern Programming in SPSU} {}{} {\textcolor{blue} {\link[link]{http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}}, Saint-Petersburg} {First year: C++ with Code Review, Algorithms, Calculus, Algebra, Discrete Math, UNIX\newline  Second year: Java, Haskell, Algorithms, Calculus, Algebra, Discrete Math, Computer architecture}
     
-        \cventry{2017 -- 2019} {School} {}{} {Mathematics and Informatics class at SPSU} {Final Exams(Mathematics $\frac{99} {100}$, Informatics $\frac{97} {100}$)}
+        \cventry{2017 -- 2019} {School} {}{} {Mathematics and Informatics class at SPSU} {}
         
     \section{GitHub and Projects}
         
-        \cventry{Spring 2020} {Image analysis, circle finder} {3 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/MapLap} {MapLap}}} {} {\newline Image application returning \LaTeX code. You can load a photo, scan or screenshot} {I made Algorithm. My tools \textcolor{Attention} {Python \& OpenCV} }
+        \cventry{Spring 2020} {Image analysis, circle finder} {3 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/MapLap} {link: MapLap}}} {} {\newline Image application returning \LaTeX code. You can load a photo, scan or screenshot} {I made Algorithm. My tools \textcolor{Attention} {Python \& OpenCV} }
         
-        \cventry{Summer 2020} {Image analysis, draw digitization} {\textcolor{blue} {\href{https://github.com/a-alex-l/MapLap_2} {MapLap2.0}}} {\newline Highly Optimized Console Image application. Optimization by 15 times}{} {I made all application with test cases and my own Hough Transform. My tools \textcolor{Attention} {C++ \& OpenCV} }
+        \cventry{Summer 2020 \newline (current) } {Image analysis, draw digitization} {\textcolor{blue} {\href{https://github.com/a-alex-l/MapLap_2} {link: MapLap2.0}}} {\newline Highly Optimized Console Image application. Optimization by 15 times}{} {I made all application with test cases and my own Hough Transform. My tools \textcolor{Attention} {C++ \& OpenCV} }
         
-        \cventry{Summer 2020} {Mobile Game, Physics Tetris} {2 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/TetrisBuilder} {Tetris Builder}}} {\newline A game based on tetris blocks}{} {I made the GamePlay. My tools \textcolor{Attention} {Godot Engine \& SQLite} }
+        \cventry{Summer 2020 \newline (current) } {Mobile Game, Physics Tetris} {2 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/TetrisBuilder} {link: Tetris Builder}}} {\newline A game based on tetris blocks, also blocks can fall and collide}{} {I made the GamePlay (Move Blocks and time management). My tools \textcolor{Attention} {Godot Engine \& SQLite} }
         
     \section{Summer and Winter Schools}
         
-        \cventry{2019 \& 2018} {Summer Informatics Camp} {}{} {Algorithms ans Data Structures} {}
+        \cventry{2019 \& 2018} {Summer Informatics Camp} {}{} {Algorithms and Data Structures} {}
         
-        \cventry{2018 \& 2017} {Summer School Olympiad Prep} {}{} {Olympiad Algorithms ans Data Structures} {}
+        \cventry{2018 \& 2017} {Summer School Olympiad Prep} {}{} {Olympiad Algorithms and Data Structures} {}
         
-        \cventry{2016-2019} {ITMO Advanced Programming Section} {}{} {Algorithms ans Data Structures} {}
+        \cventry{2016-2019} {ITMO Advanced Programming Section} {}{} {Algorithms and Data Structures} {}
         
         \cventry{} {Sum} {}{} {Binsearch, DSU, MST, BST, vector geometric, graph algorithms, string algorithms} {}
     
@@ -61,17 +61,17 @@
         
         \cventry{2018} {First Tech Challenge Russia} {}{} {\textcolor{blue} {\link[First FTC]{https://www.spbstu.ru/media/news/achievements/team-polytechnic-quota-world-championship-robotics-usa/}}, \textcolor{Attention} {Design Award}, \textcolor{Attention} {Winning Aliance Captain}} {}
         
-        \cventry{2018} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/it-test/827}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}} $\frac{97} {458} \cdot \frac{458} {1633}$} {}
+        \cventry{2018} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/it-test/827}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}}} {}
         
-        \cventry{2019} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/olymp-it-18-19/1212}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}} $\frac{159} {900} \cdot \frac{900} {2932}$} {}
+        \cventry{2019} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/olymp-it-18-19/1212}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}}} {}
     
-        \cventry{2019} {Moscow Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{http://mos-inf.olimpiada.ru/winners10-11-2019}}, \textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142002045626/color.pdf}} $\frac{11} {435} \cdot \frac{435} {2000+}$} {}
+        \cventry{2019} {Moscow Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{http://mos-inf.olimpiada.ru/winners10-11-2019}}, \textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142002045626/color.pdf}}} {}
         
-        \cventry{2019} {SPSU Olympiad in computer science} {}{} {\textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141299110240/color.pdf}} $\frac{15} {258} \cdot \frac{258} {2000+}$} {}
+        \cventry{2019} {SPSU Olympiad in computer science} {}{} {\textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141299110240/color.pdf}}} {}
         
-        \cventry{2019} {Open Olympiad in Cognitive Technology Programming} {}{} {\textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf}} $\frac{17} {523}$} {}
+        \cventry{2019} {Open Olympiad in Cognitive Technology Programming} {}{} {\textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf}}} {}
         
-        \cventry{2019} {Individual Olympiad in Computer Science} {}{} {\textcolor{blue} {\link[link]{https://neerc.ifmo.ru/school/ioip/standings-2019.html}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142050593076/color.pdf}} $\frac{87} {339}$} {}
+        \cventry{2019} {Individual Olympiad in Computer Science} {}{} {\textcolor{blue} {\link[link]{https://neerc.ifmo.ru/school/ioip/standings-2019.html}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142050593076/color.pdf}}} {}
     
     \section{Technical skills}
     
