--- a/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
+++ b/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
@@ -33,7 +33,7 @@
 
     \section{Education}
     
-        \cventry{2019 -- 2023} {Bachelor, Modern Programming in SPSU} {}{} {\textcolor{blue} {\link[link]{http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}}, Saint-Petersburg} {First year: C++ with Code Review, Algorithms, Calculus, Algebra, Discrete Math, UNIX\newline  Second year: Kotlin, Haskell, Algorithms, Calculus, Algebra, Computer architecture}
+        \cventry{2019 -- 2023} {Bachelor, Modern Programming in SPSU} {}{} {\textcolor{blue} {\link[link]{http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}}, Saint-Petersburg} {First year: C++ with Code Review, Algorithms, Calculus, Algebra, Discrete Math, UNIX\newline  Second year: Kotlin, Haskell, Algorithms, Calculus, Linear Algebra, Computer architecture}
     
         \cventry{2017 -- 2019} {School} {}{} {Mathematics and Informatics class at SPSU} {}
         
