Removed irrelevant information and fixed typos

--- a/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
+++ b/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
@@ -23,7 +23,7 @@
 	\begin{minipage} {0.3\textwidth}
 		\begin{flushright}
 			\textcolor[gray]{0.4} {
-				\indent Saint-Ptersburg, Russia\\
+				\indent Saint-Petersburg, Russia\\
 				\indent Mobile: +7(981)107-60-21  \\
 				\indent Email : \textcolor{blue} {\href{mailto:lesnik-a-a@yandex.ru} {lesnik-a-a@yandex.ru}}\\ 
 				\indent GitHub : \textcolor{blue} {\href{https://github.com/a-alex-l} {a-alex-l}}\\  	
@@ -39,11 +39,11 @@
         
     \section{GitHub and Projects}
         
-        \cventry{Spring 2020} {Image analysis, circle finder} {3 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/MapLap} {link: MapLap}}} {} {\newline Image application returning \LaTeX code. You can load a photo, scan or screenshot} {I made Algorithm. My tools \textcolor{Attention} {Python \& OpenCV} }
+        \cventry{Spring 2020} {Image analysis, circle finder} {3 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/MapLap} {link: MapLap}}} {} {\newline Image application is returning \LaTeX code. You can load a photo, scan or screenshot} {I made Algorithm. My tools are \textcolor{Attention} {Python \& OpenCV} }
         
-        \cventry{Summer 2020 \newline (current) } {Image analysis, draw digitization} {\textcolor{blue} {\href{https://github.com/a-alex-l/MapLap_2} {link: MapLap2.0}}} {\newline Highly Optimized Console Image application. Optimization by 15 times}{} {I made all application with test cases and my own Hough Transform. My tools \textcolor{Attention} {C++ \& OpenCV} }
+        \cventry{Summer 2020 \newline (current) } {Image analysis, draw digitization} {\textcolor{blue} {\href{https://github.com/a-alex-l/MapLap_2} {link: MapLap2.0}}} {\newline Highly Optimized Console Image application}{} {I made application with test cases and my own Hough Transform. My tools are \textcolor{Attention} {C++ \& OpenCV} }
         
-        \cventry{Summer 2020 \newline (current) } {Mobile Game, Physics Tetris} {2 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/TetrisBuilder} {link: Tetris Builder}}} {\newline A game based on tetris blocks, also blocks can fall and collide}{} {I made the GamePlay (Move Blocks and time management). My tools \textcolor{Attention} {Godot Engine \& SQLite} }
+        \cventry{Summer 2020 \newline (current) } {Mobile Game, Physics Tetris} {2 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/TetrisBuilder} {link: Tetris Builder}}} {\newline A game based on tetris blocks, also blocks can fall and collide}{} {I made the GamePlay (Move Blocks and time management). My tool is \textcolor{Attention} {Godot Engine} }
         
     \section{Summer and Winter Schools}
         
@@ -53,13 +53,13 @@
         
         \cventry{2016-2019} {ITMO Advanced Programming Section} {}{} {Algorithms and Data Structures} {}
         
-        \cventry{} {Sum} {}{} {Binsearch, DSU, MST, BST, vector geometric, graph algorithms, string algorithms} {}
+        \cventry{} {Summary} {}{} { binary search, DSU, MST, BST, vector geometric, graph algorithms, string algorithms, dynamic programming, quick sorting, hashing, FFT, Gauss algorithm} {}
     
     \section{Olympiads and Competitions}
     
-        \cventry{2017} {First Tech Challenge Russia} {}{} {\textcolor{blue} {\link[First FTC]{https://www.spbstu.ru/media/news/achievements/team-school-engineers-future-russia-winner-championship-robotics/}}, \textcolor{Attention} {Inspire Award}} {}
+        \cventry{2017} {FIRST Tech Challenge Russia} {}{} {\textcolor{blue} {\link[FIRST FTC]{https://www.spbstu.ru/media/news/achievements/team-school-engineers-future-russia-winner-championship-robotics/}}, \textcolor{Attention} {Inspire Award}} {}
         
-        \cventry{2018} {First Tech Challenge Russia} {}{} {\textcolor{blue} {\link[First FTC]{https://www.spbstu.ru/media/news/achievements/team-polytechnic-quota-world-championship-robotics-usa/}}, \textcolor{Attention} {Design Award}, \textcolor{Attention} {Winning Aliance Captain}} {}
+        \cventry{2018} {FIRST Tech Challenge Russia} {}{} {\textcolor{blue} {\link[FIRST FTC]{https://www.spbstu.ru/media/news/achievements/team-polytechnic-quota-world-championship-robotics-usa/}}, \textcolor{Attention} {Design Award}, \textcolor{Attention} {Winning Aliance Captain}} {}
         
         \cventry{2018} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/it-test/827}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}}} {}
         
@@ -77,7 +77,7 @@
     
         \cvitem{Languages} {C++, C, Python, Kotlin, Julia, \LaTeX }
         
-        \cvitem{Tools} {STL, GitHub, SVN, QT, OpenCV, Creo Parametric (3D modeling), Godot, SQLite}
+        \cvitem{Tools} {STL, GitHub, SVN, QT, OpenCV, Creo Parametric (3D modeling), Godot}
     
     \section{Languages}
     
