Reordered fields. Removed blue link. Eventually resume became cleaner.

--- a/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
+++ b/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
@@ -25,27 +25,40 @@
 			\textcolor[gray]{0.4} {
 				\indent Saint-Petersburg, Russia\\
 				\indent Mobile: +7(981)107-60-21  \\
-				\indent Email : \textcolor{blue} {\href{mailto:lesnik-a-a@yandex.ru} {lesnik-a-a@yandex.ru}}\\ 
-				\indent GitHub : \textcolor{blue} {\href{https://github.com/a-alex-l} {a-alex-l}}\\  	
+				\indent Email : \href{mailto:lesnik-a-a@yandex.ru} {lesnik-a-a@yandex.ru}\\ 
+				\indent GitHub : \href{https://github.com/a-alex-l} {a-alex-l}\\  	
 			}
 		\end{flushright}
 	\end{minipage}
 
     \section{Education}
     
-        \cventry{2019 -- 2023} {Bachelor, Modern Programming in SPSU} {}{} {\textcolor{blue} {\link[link]{http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}}, Saint-Petersburg} {First year: C++ with Code Review, Algorithms, Calculus, Algebra, Discrete Math, UNIX\newline  Second year: Kotlin, Haskell, Algorithms, Calculus, Linear Algebra, Computer architecture}
-    
-        \cventry{2017 -- 2019} {School} {}{} {Mathematics and Informatics class at SPSU} {}
+        \cventry{2019 -- 2023}
+            {\href {http://english.spbu.ru/education/undergraduate/bachelor/85-program-bac/2496-modern-programming}
+                {Bachelor, Modern Programming in SPSU}}
+            {}{}
+            {Saint-Petersburg}
+            {First year: C++ with Code Review, Algorithms, Calculus, Algebra, Discrete Math, UNIX\newline
+             Second year: Kotlin, Haskell, Algorithms, Calculus, Linear Algebra, Computer architecture}
         
     \section{GitHub and Projects}
         
-        \cventry{Spring 2020} {Image analysis, circle finder} {3 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/MapLap} {link: MapLap}}} {} {\newline Image application is returning \LaTeX code. You can load a photo, scan or screenshot} {I made Algorithm. My tools are \textcolor{Attention} {Python \& OpenCV} }
+        \cventry{Spring 2020}
+            {\href {https://github.com/a-alex-l/MapLap} {MapLap}} {Circle and Line finder, 3 participants}
+            {\newline MapLap is returning \LaTeX code. You can load a photo, scan or screenshot} {}
+            {I developed Detector Algorithm. My tools ware \textcolor{Attention} {Python \& OpenCV} }
         
-        \cventry{Summer 2020 \newline (current) } {Image analysis, draw digitization} {\textcolor{blue} {\href{https://github.com/a-alex-l/MapLap_2} {link: MapLap2.0}}} {\newline Highly Optimized Console Image application}{} {I made application with test cases and my own Hough Transform. My tools are \textcolor{Attention} {C++ \& OpenCV} }
+        \cventry{Summer 2020 \newline (current) }
+            {\href{https://github.com/a-alex-l/MapLap_2} {MapLap 2.0}} {Ellipses and Line finder}
+            {\newline Highly Optimized Console Image application} {}
+            {I made application with test cases and my own Hough Transform. My tools were \textcolor{Attention} {C++ \& OpenCV}}
         
-        \cventry{Summer 2020 \newline (current) } {Mobile Game, Physics Tetris} {2 participants, \textcolor{blue} {\href{https://github.com/a-alex-l/TetrisBuilder} {link: Tetris Builder}}} {\newline A game based on tetris blocks, also blocks can fall and collide}{} {I made the GamePlay (Move Blocks and time management). My tool is \textcolor{Attention} {Godot Engine} }
+        \cventry{Summer 2020 \newline (current) }
+            {\href{https://github.com/a-alex-l/TetrisBuilder} {Tetris Builder}} {Mobile Game, Physics Tetris, 2 participants}
+            {\newline A game based on tetris blocks, also blocks can fall and collide} {}
+            {I implemented the Game Process. My tool was \textcolor{Attention} {C++ \& Godot Engine} }
         
-    \section{Summer and Winter Schools}
+    \section{Summer and Winter Coding Camps}
         
         \cventry{2019 \& 2018} {Summer Informatics Camp} {}{} {Algorithms and Data Structures} {}
         
@@ -57,27 +70,40 @@
     
     \section{Olympiads and Competitions}
     
-        \cventry{2017} {FIRST Tech Challenge Russia} {}{} {\textcolor{blue} {\link[FIRST FTC]{https://www.spbstu.ru/media/news/achievements/team-school-engineers-future-russia-winner-championship-robotics/}}, \textcolor{Attention} {Inspire Award}} {}
-        
-        \cventry{2018} {FIRST Tech Challenge Russia} {}{} {\textcolor{blue} {\link[FIRST FTC]{https://www.spbstu.ru/media/news/achievements/team-polytechnic-quota-world-championship-robotics-usa/}}, \textcolor{Attention} {Design Award}, \textcolor{Attention} {Winning Aliance Captain}} {}
-        
-        \cventry{2018} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/it-test/827}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}}} {}
-        
-        \cventry{2019} {ITMO Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{https://olymp.ifmo.ru/ru/p/olymp-it-18-19/1212}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141943516200/color.pdf}}} {}
+        \cventry{} {Team competition in robotics} {} {} {} {}
     
-        \cventry{2019} {Moscow Olympiad in computer science} {}{} {\textcolor{blue} {\link[link]{http://mos-inf.olimpiada.ru/winners10-11-2019}}, \textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142002045626/color.pdf}}} {}
+        \cventry{2017} {Inspire Award out of 25 participants}
+            {\href {https://www.spbstu.ru/media/news/achievements/team-school-engineers-future-russia-winner-championship-robotics/} {FIRST Tech Challenge Russia}} {} {} {}
         
-        \cventry{2019} {SPSU Olympiad in computer science} {}{} {\textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141299110240/color.pdf}}} {}
+        \cventry{2018} {Design Award and Winning Aliance Captain out of 30 participants}
+            {\href {https://www.spbstu.ru/media/news/achievements/team-polytechnic-quota-world-championship-robotics-usa/}
+            {FIRST FTC}} {} {} {}
+            
+        \cventry{} {Competetive programming results} {} {} {} {}
         
-        \cventry{2019} {Open Olympiad in Cognitive Technology Programming} {}{} {\textcolor{Attention} {First} degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf}}} {}
+        \cventry{2018} {\href {https://olymp.ifmo.ru/ru/p/it-test/827} {Top 100 out of 1600 participants}}
+            {ITMO Olympiad in Computer Science} {} {} {}
         
-        \cventry{2019} {Individual Olympiad in Computer Science} {}{} {\textcolor{blue} {\link[link]{https://neerc.ifmo.ru/school/ioip/standings-2019.html}}, Third degree \textcolor{blue} {\link[diploma]{https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142050593076/color.pdf}}} {}
+        \cventry{2019} {\href {https://olymp.ifmo.ru/ru/p/olymp-it-18-19/1212} {Top 160 out of 2900 participants}}
+            {ITMO Olympiad in Computer Science} {} {} {}
+        
+        \cventry{2019} {\href {http://mos-inf.olimpiada.ru/winners10-11-2019} {Top 11 out of 2000 participants}}
+            {Moscow Olympiad in Computer Science} {} {} {}
+        
+        \cventry{2019} {\href {https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/141299110240/color.pdf} {Top 15 out of 2000 participants}}
+            {SPSU Olympiad in Computer Science} {} {} {}
+            
+        \cventry{2019} {\href {https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf} {Top 17 out of 520 participants}}
+            {Open Olympiad in Cognitive Technology Programming} {} {} {}
+        
+        \cventry{2018} {\href {https://neerc.ifmo.ru/school/ioip/standings-2019.html} {Top 87 out of more than 1000 participants}}
+            {Individual Olympiad in Computer Science} {} {} {}
     
     \section{Technical skills}
     
-        \cvitem{Languages} {C++, C, Python, Kotlin, Julia, \LaTeX }
+        \cvitem{Languages} {C++, C, Python, Kotlin, Julia }
         
-        \cvitem{Tools} {STL, GitHub, SVN, QT, OpenCV, Creo Parametric (3D modeling), Godot}
+        \cvitem{Tools} {STL, GitHub, SVN, OpenCV, QT, Creo Parametric, Godot, \LaTeX}
     
     \section{Languages}
     
