--- a/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
+++ b/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
@@ -4,7 +4,7 @@
 \usepackage{lipsum}
 \usepackage[scale=0.8]{geometry}
 \usepackage{geometry}
-\geometry{verbose, a4paper, tmargin = 1.5cm, bmargin = 1cm, lmargin = 1cm, rmargin = 1cm}
+\geometry{verbose, a4paper, tmargin = 1cm, bmargin = 1cm, lmargin = 1cm, rmargin = 1cm}
 
 \begin{document}
 
@@ -15,7 +15,7 @@
 			\huge \textbf{Aleksei Lesnik} 
 			\newline
 			\textcolor[gray]{0.4} {
-			    \indent Software Engineer / Programmer\\
+			    \indent Software Engineer \& Research\\
 			}
 			\normalsize
 		\end{flushleft}
@@ -38,25 +38,43 @@
                 {Bachelor, Modern Programming in SPSU}}
             {}{}
             {Saint-Petersburg}
-            {First year: C++ with Code Review, Algorithms, Calculus, Algebra, Discrete Math, UNIX\newline
-             Second year: Kotlin, Haskell, Algorithms, Calculus, Linear Algebra, Computer architecture}
+            {}
+
+    \section{Experience}
+
+        \cventry{Current \newline 17 month\newline}{Yandex, C++ \& Python Neural Network Inference}{}{}{Saint-Petersburg}
+            {Worked on several algorithms - memory, speed, and compression upgrades. \newline
+             - Achieved about 100\% speed increase through quantization implementation. \newline
+             - Achieved about 100\% speed increase in matrix multiplication through a faster algorithm. \newline
+             - Achieved about 20\% speed increase by removing duplicates in calculation graph.}
+             
+        \cventry{22 month\newline}{Huawei, C++ \& Python Data Compression Research}{}{}{Saint-Petersburg}
+            {Worked on several algorithms - memory, speed, and compression upgrades. \newline
+             - For first project improved mem by 70\%, speed by 40\% and compression ratio by 2\%. \newline
+             - For the second one, improved speed by 20\% and some NDA metric by around 10\%. \newline
+             - For the third project, improved performance by 5\%.}
+    
+        \cventry{3 month\newline in  2021\newline}{Yandex, Python backend}{}{}{Saint-Petersburg}
+            {- Created library for internal service, with test coverage 100\%. \newline
+             - Added service to service authorization, with test coverage 100\%. \newline
+             - Added 3 new scenario of user support, with test coverage 30\%. \newline}
         
-    \section{GitHub and Projects}
+    \section{Projects on GitHub}
         
         \cventry{Spring 2020}
             {\href {https://github.com/a-alex-l/MapLap} {MapLap}} {Circle and Line finder, 3 participants}
             {\newline MapLap is returning \LaTeX code. You can load a photo, scan or screenshot} {}
-            {I developed Detector Algorithm. My tools ware \textcolor{Attention} {Python \& OpenCV} }
+            {I developed Detector Algorithm. My tools ware \textcolor{Attention} {Python \& OpenCV}}
         
-        \cventry{Summer 2020 \newline (current) }
-            {\href{https://github.com/a-alex-l/MapLap_2} {MapLap 2.0}} {Ellipses and Line finder}
-            {\newline Highly Optimized Console Image application} {}
-            {I made application with test cases and my own Hough Transform. My tools were \textcolor{Attention} {C++ \& OpenCV}}
+        \cventry{Spring 2021}
+            {\href{https://github.com/a-alex-l/Rid_of_Grid} {Rid Of Grid}} {Grid eraser with shadow removing}
+            {\newline Erases grid from pictures of notes. Performs better than the top 3 online erasers}{}
+            {My tools were \textcolor{Attention} {Python \& OpenCV \& Numpy \& Matplotlib}}
         
-        \cventry{Summer 2020 \newline (current) }
-            {\href{https://github.com/a-alex-l/TetrisBuilder} {Tetris Builder}} {Mobile Game, Physics Tetris, 2 participants}
-            {\newline A game based on tetris blocks, also blocks can fall and collide} {}
-            {I implemented the Game Process. My tool was \textcolor{Attention} {C++ \& Godot Engine} }
+        \cventry{Spring 2021}
+            {\href{https://github.com/a-alex-l/Warehouse_Automation} {Warehouse Automation}} {Several robots moves boxes, 2 participants}
+            {\newline It's a research project in order to find most fast and accurate algorithm}{}
+            {My tools were \textcolor{Attention} {C++ \& SFML}}
         
     \section{Summer and Winter Coding Camps}
         
@@ -65,27 +83,8 @@
         \cventry{2018 \& 2017} {Summer School Olympiad Prep} {}{} {Olympiad Algorithms and Data Structures} {}
         
         \cventry{2016-2019} {ITMO Advanced Programming Section} {}{} {Algorithms and Data Structures} {}
-        
-        \cventry{} {Summary} {}{} { binary search, DSU, MST, BST, vector geometric, graph algorithms, string algorithms, dynamic programming, quick sorting, hashing, FFT, Gauss algorithm} {}
     
     \section{Olympiads and Competitions}
-    
-        \cventry{} {Team competition in robotics} {} {} {} {}
-    
-        \cventry{2017} {Inspire Award out of 25 participants}
-            {\href {https://www.spbstu.ru/media/news/achievements/team-school-engineers-future-russia-winner-championship-robotics/} {FIRST Tech Challenge Russia}} {} {} {}
-        
-        \cventry{2018} {Design Award and Winning Aliance Captain out of 30 participants}
-            {\href {https://www.spbstu.ru/media/news/achievements/team-polytechnic-quota-world-championship-robotics-usa/}
-            {FIRST FTC}} {} {} {}
-            
-        \cventry{} {Competetive programming results} {} {} {} {}
-        
-        \cventry{2018} {\href {https://olymp.ifmo.ru/ru/p/it-test/827} {Top 100 out of 1600 participants}}
-            {ITMO Olympiad in Computer Science} {} {} {}
-        
-        \cventry{2019} {\href {https://olymp.ifmo.ru/ru/p/olymp-it-18-19/1212} {Top 160 out of 2900 participants}}
-            {ITMO Olympiad in Computer Science} {} {} {}
         
         \cventry{2019} {\href {http://mos-inf.olimpiada.ru/winners10-11-2019} {Top 11 out of 2000 participants}}
             {Moscow Olympiad in Computer Science} {} {} {}
@@ -95,18 +94,13 @@
             
         \cventry{2019} {\href {https://diploma.rsr-olymp.ru/files/rsosh-diplomas-static/compiled-storage-2019/by-code/142158979050/color.pdf} {Top 17 out of 520 participants}}
             {Open Olympiad in Cognitive Technology Programming} {} {} {}
+    
+    \section{Skills}
+    
+        \cvitem{Languages} {Python, C++, C}
         
-        \cventry{2018} {\href {https://neerc.ifmo.ru/school/ioip/standings-2019.html} {Top 87 out of more than 1000 participants}}
-            {Individual Olympiad in Computer Science} {} {} {}
+        \cvitem{Tools} {GitHub, STL, Numpy, Pandas, Matplotlib, OpenCV, Pytorch, Sklearn}
     
-    \section{Technical skills}
-    
-        \cvitem{Languages} {C++, C, Python, Kotlin, Julia }
-        
-        \cvitem{Tools} {STL, GitHub, SVN, OpenCV, QT, Creo Parametric, Godot, \LaTeX}
-    
-    \section{Languages}
-    
-        \cvitem{English} {Intermediate}
+        \cvitem{English} {Upper Intermediate}
         
 \end{document}
