--- a/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
+++ b/Aleksei_Lesnik_cv_SWE/Aleksei_Lesnik_cv_SWE.tex
@@ -40,31 +40,29 @@
             {Saint-Petersburg}
             {}
 
-    \section{Experience}
+    \section{Experience 4.3 years}
 
-        \cventry{Current \newline 17 month\newline}{Yandex, C++ \& Python Neural Network Inference}{}{}{Saint-Petersburg}
-            {Worked on several algorithms - memory, speed, and compression upgrades. \newline
+        \cventry{Current \newline 4 month\newline}{VK, C++ \& Python Search engine}{}{}{Saint-Petersburg}
+            {Added a new way of storing ML models.}
+
+        \cventry{23 month\newline}{Yandex, C++ \& Python Neural Network Inference}{}{}{Saint-Petersburg}
+            {Made a bunch of perf tasks: CPU/GPU speed, memory, and quantization.  \newline
              - Achieved about 100\% speed increase through quantization implementation. \newline
              - Achieved about 100\% speed increase in matrix multiplication through a faster algorithm. \newline
-             - Achieved about 20\% speed increase by removing duplicates in calculation graph.}
+             - Achieved about 20\% speed increase by removing duplicates in the calculation graph.}
              
         \cventry{22 month\newline}{Huawei, C++ \& Python Data Compression Research}{}{}{Saint-Petersburg}
             {Worked on several algorithms - memory, speed, and compression upgrades. \newline
-             - For first project improved mem by 70\%, speed by 40\% and compression ratio by 2\%. \newline
+             - For the first project, improved mem by 70\%, speed by 40\%, and compression ratio by 2\%. \newline
              - For the second one, improved speed by 20\% and some NDA metric by around 10\%. \newline
              - For the third project, improved performance by 5\%.}
     
-        \cventry{3 month\newline in  2021\newline}{Yandex, Python backend}{}{}{Saint-Petersburg}
-            {- Created library for internal service, with test coverage 100\%. \newline
+        \cventry{3 month\newline in  2021\newline}{Yandex, Internship Python Backend}{}{}{Saint-Petersburg}
+            {- Created a library for internal service, with test coverage 100\%. \newline
              - Added service to service authorization, with test coverage 100\%. \newline
-             - Added 3 new scenario of user support, with test coverage 30\%. \newline}
+             - Added 3 new scenarios of user support, with test coverage 30\%. \newline}
         
     \section{Projects on GitHub}
-        
-        \cventry{Spring 2020}
-            {\href {https://github.com/a-alex-l/MapLap} {MapLap}} {Circle and Line finder, 3 participants}
-            {\newline MapLap is returning \LaTeX code. You can load a photo, scan or screenshot} {}
-            {I developed Detector Algorithm. My tools ware \textcolor{Attention} {Python \& OpenCV}}
         
         \cventry{Spring 2021}
             {\href{https://github.com/a-alex-l/Rid_of_Grid} {Rid Of Grid}} {Grid eraser with shadow removing}
@@ -73,7 +71,7 @@
         
         \cventry{Spring 2021}
             {\href{https://github.com/a-alex-l/Warehouse_Automation} {Warehouse Automation}} {Several robots moves boxes, 2 participants}
-            {\newline It's a research project in order to find most fast and accurate algorithm}{}
+            {\newline It's a research project in order to find the most fast and accurate algorithm}{}
             {My tools were \textcolor{Attention} {C++ \& SFML}}
         
     \section{Summer and Winter Coding Camps}
@@ -97,9 +95,9 @@
     
     \section{Skills}
     
-        \cvitem{Languages} {Python, C++, C}
+        \cvitem{Languages}  {C++, C, Python}
         
-        \cvitem{Tools} {GitHub, STL, Numpy, Pandas, Matplotlib, OpenCV, Pytorch, Sklearn}
+        \cvitem{Tools} {GitHub, STL, Numpy, Pandas, Matplotlib, Pytorch, Sklearn}
     
         \cvitem{English} {Upper Intermediate}
         
